--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
   application:
     name: sports-backend
   datasource:
-    url: jdbc:mysql://localhost:3306/consumption_mgmt?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
-    username: root
-    password: your_password
+    url: ${DB_URL:jdbc:mysql://localhost:3306/consumption_mgmt?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false}
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
