--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,6 @@ spring:
     active: dev
   jackson:
     time-zone: UTC
-    date-format: yyyy-MM-dd HH:mm:ss
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -41,5 +40,9 @@ spring:
   datasource:
     url: ${DB_URL:jdbc:mysql://localhost:3306/consumption_mgmt?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false}
     username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:123456}
+    password: ${DB_PASSWORD:}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:db/schema-mysql.sql
